--- a/argocd/appset.yaml
+++ b/argocd/appset.yaml
@@ -20,7 +20,7 @@ spec:
         namespace: guestbook-{{path.basename}}
         # Specify either a cluster destination name or server address:
         # name: REPLACEME
-        # server: https://REPLACEME
+        server: https://kubernetes.default.svc
       project: guestbook
       source:
         path: ./
